# QSeriesHunter

./: .gitignore  CMakeLists.txt  QSeriesHunter.pro  README.txt  common.pri  version.cmake
main/: CMakeLists.txt  main.cpp  main.pro  qrc_QSeriesHunter.cpp
main/Resources/: QSeriesHunter.icns  QSeriesHunter.qrc  QSeriesHunter.rc
src/: CMakeLists.txt  ILogger.h  adddialog.cpp  adddialog.h  config.h.cmake  downloader.cpp  downloader.h  editserie.cpp  editserie.h  editseriedialog.cpp  editseriedialog.h  idefaultexternalapprunner.h  ieditseriedialog.h  imessagebox.h  inetworkaccess.cpp  inetworkaccess.h  iseriedownloader.h  iseriescontroller.h  isohunt.cpp  isohunt.h  itorrenfinder.cpp  itorrentfinder.h  log.h  loggerwidget.h  mainwindow.cpp  mainwindow.h  mementocontroller.cpp  mementocontroller.h  messagebox.cpp  networkaccess.cpp  networkaccess.h  qrc_QSeriesHunter.cpp  scheduler.cpp  scheduler.h  serie.cpp  serie.h  seriedownloader.cpp  seriedownloader.h  seriescontroller.cpp  seriescontroller.h  (+15 more)
src/gui/: builder.cpp  builder.h  editfinder.cpp  editfinder.h  editfinderwidget.cpp  editfinderwidget.h  editserie.cpp  editserie.h  editseriedialog.cpp  editseriedialog.h  finderselection.cpp  finderselection.h  finderselectionwidget.cpp  finderselectionwidget.h  finderswidget.cpp  finderswidget.h  ieditfinderwidget.h  ieditseriedialog.h  ifinderselectionwidget.h  imessagebox.h  loggerwidget.cpp  loggerwidget.h  mainwindow.cpp  mainwindow.h  messagebox.cpp  messagebox.h  seriesmodel.cpp  seriesmodel.h  seriesprovider.cpp  seriesprovider.h  serieswidget.cpp  serieswidget.h
src/network/: abstractfinder.cpp  abstractfinder.h  defaultexternalapprunner.cpp  defaultexternalapprunner.h  downloader.cpp  downloader.h  filestube.cpp  filestube.h  findercontroller.cpp  findercontroller.h  finderresult.cpp  finderresult.h  inetworkaccess.h  isohunt.cpp  isohunt.h  itorrentfinder.h  regexp_tools.cpp  regexp_tools.h  regexpprovider.h  regexpprovider_se.cpp  regexpprovider_se.h  regexpprovider_x.cpp  regexpprovider_x.h  torrentfindercontroller.cpp  torrentfindercontroller.h  torrentfinderresult.cpp  torrentfinderresult.h
src/resources/: src.qrc
src/series/: findersmemento.cpp  findersmemento.h  iseriescontroller.h  mementocontroller.cpp  mementocontroller.h  scheduler.cpp  scheduler.h  serie.cpp  serie.h  seriescontroller.cpp  seriescontroller.h  seriesmemento.cpp  seriesmemento.h  seriesprovider.cpp  seriesprovider.h
test_unit/: CMakeLists.txt  main.cpp  qrc_QSeriesHunter.cpp  shared.h  stub_defaultapprunner.cpp  stub_defaultapprunner.h  stub_editfinderwidget.cpp  stub_editfinderwidget.h  stub_editseriedialog.cpp  stub_editseriedialog.h  stub_finder.cpp  stub_finder.h  stub_finderselection.cpp  stub_finderselection.h  stub_logger.cpp  stub_logger.h  stub_messagebox.cpp  stub_messagebox.h  stub_networkaccess.cpp  stub_networkaccess.h  stub_seriedownloader.cpp  stub_seriedownloader.h  stub_seriesprovider.cpp  stub_seriesprovider.h  stub_torrentfinder.cpp  stub_torrentfinder.h  test_unit.pro  tests.qrc  tst_downloader.cpp  tst_downloader.h  tst_editfinder.cpp  tst_editfinder.h  tst_editserie.cpp  tst_editserie.h  tst_filestube.cpp  tst_filestube.h  tst_findercontroller.cpp  tst_findercontroller.h  tst_finderselection.cpp  tst_finderselection.h  (+24 more)
test_unit/input/: all_series.json  dexter_s06.json  json_input.txt  xml_input.xml
