SET(PROJECT_NAME QSeriesHunter)

PROJECT (${PROJECT_NAME})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# SET warning level
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-deprecated")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-unused -Wno-uninitialized")

SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
             "Debug" "Release" "Coverage")
SET(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
SET(CMAKE_C_FLAGS_COVERAGE "${CMAKE_C_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
SET(CMAKE_EXE_LINKER_FLAGS_COVERAGE "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage")

SET(EXECUTABLE_OUTPUT_PATH ${QSeriesHunter_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
SET(LIBRARY_OUTPUT_PATH ${QSeriesHunter_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE})

FIND_PACKAGE(Qt4 REQUIRED)

if (WIN32)
	LINK_DIRECTORIES("C:/Program Files/qjson/lib")
endif (WIN32)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (test_unit)
ADD_SUBDIRECTORY (main)

ENABLE_TESTING()
ADD_TEST(Test_Unit ${EXECUTABLE_OUTPUT_PATH}/test_qserieshunter)